# hyperchain-da

./: .gitignore  .gitmodules  CODEOWNERS  Cargo.toml  README.md  rust-toolchain
clients/config/config/: Cargo.toml
clients/config/config/src/: avail.rs  celestia.rs  lib.rs  near.rs
clients/config/proto_config/: Cargo.toml
clients/config/proto_config/src/: avail.rs  lib.rs  near.rs
clients/config/proto_config/src/proto/: mod.rs
clients/config/proto_config/src/proto/config/: avail.proto  near.proto
clients/implementations/avail/: Cargo.toml
clients/implementations/avail/src/: client.rs  wiring_layer.rs
clients/implementations/celestia/: Cargo.toml
clients/implementations/celestia/src/: client.rs  wiring_layer.rs
clients/implementations/near/: Cargo.toml
clients/implementations/near/contract/: abi.json
clients/implementations/near/src/: client.rs  evm_types.rs  lib.rs  near_types.rs  wiring_layer.rs
contracts/: .gitignore  foundry.toml
contracts/contracts/l1-contracts/: Avail.sol  Celestia.sol
contracts/contracts/l1-contracts/interfaces/: IAvailBridge.sol
contracts/contracts/l1-contracts/lib/: AvailAttestation.sol
contracts/contracts/l2-contracts/: Avail.sol  Celestia.sol
contracts/contracts/l2-contracts/interfaces/: IL2DAValidator.sol
contracts/lib/byteslib/: BytesLib.sol
src/: config.rs  lib.rs  test_utils.rs  types.rs
src/clients/: mod.rs
src/clients/avail/: client.rs  config.rs  wiring_layer.rs
src/clients/celestia/: client.rs  config.rs  evm_types.rs  mod.rs  resource.rs  wiring_layer.rs
src/clients/gcs/: mod.rs
src/clients/near/: client.rs  config.rs  evm_types.rs  mod.rs  wiring_layer.rs
utils/: Cargo.toml
utils/src/: lib.rs  main.rs  proto_config_parser.rs  test_utils.rs
