[package]
name = "hyperchain_da"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
celestia-rpc = {git="https://github.com/S1nus/lumina.git", rev="8c8e53aaf7f976d10a71eba670f23e5ba38997c6"}
celestia-types = {git="https://github.com/S1nus/lumina.git", rev="8c8e53aaf7f976d10a71eba670f23e5ba38997c6"}
bincode = "1.3.3"
hex = "0.4.3"
nmt-rs = {git="https://github.com/Sovereign-Labs/nmt-rs.git", rev="ac03d7c"}
zksync_node_framework = { package = "zksync_node_framework", path = "../zksync-era/core/node/node_framework" }
zksync_env_config = { package = "zksync_env_config", path = "../zksync-era/core/lib/env_config" }
zksync_da_client = { package = "zksync_da_client", path = "../zksync-era/core/lib/da_client" }

[dev-dependencies]
serde_json = "1.0.114"

[patch.crates-io]
nmt-rs = {git="https://github.com/Sovereign-Labs/nmt-rs.git", rev="ac03d7c"}
