[package]
name = "near_client"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
da_utils.workspace = true
da_config.workspace = true
proto_config.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
zksync_node_framework.workspace = true
zksync_env_config.workspace = true
zksync_da_client.workspace = true

# NEAR DA DEPENDENCIES
near-da-primitives = { git = "https://github.com/Nuffle-Labs/data-availability.git" }
near-da-rpc = { git = "https://github.com/Nuffle-Labs/data-availability.git" }
near-jsonrpc-client = "0.12.0"
near-primitives = "0.25.0"

alloy = { version = "0.2.1", features = ["full"] }
bs58 = "0.5.1"
borsh = "1.5.1"
reqwest = "0.12"
